--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 /* Header */
 .header {
-    background-color: #333;
+    background-color: #070707;
     color: white;
     text-align: center;
     padding: 20px;
@@ -62,7 +62,7 @@ body {
 
 .cat-section h2 {
     text-align: center;
-    color: #333;
+    color: #0c0c0c;
     margin-bottom: 30px;
     font-size: 2rem;
 }
@@ -104,7 +104,7 @@ body {
 }
 
 .cat-card p {
-    color: #666;
+    color: #0b0808;
 }
 
 /* Facts Section */
@@ -174,7 +174,7 @@ body {
 .contact-section button {
     width: 100%;
     padding: 15px;
-    background-color: #333;
+    background-color: #000000;
     color: white;
     border: none;
     border-radius: 5px;
@@ -184,12 +184,12 @@ body {
 }
 
 .contact-section button:hover {
-    background-color: #555;
+    background-color: #040404;
 }
 
 /* Footer */
 .footer {
-    background-color: #333;
+    background-color: #050505;
     color: white;
     text-align: center;
     padding: 20px;
